rajout de style

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 		<link rel="stylesheet" href="./public/css/index.css">
 	</head>
 
-    <header>
-        <p>Cartoon politics</p>
-        <img id="logo" src="./public/img/price.png" alt="Logo représentant une étiquette">
-        <button class="langue">FR</button>
-        <button class="langue">EN</button>
+    <header role="banner">
+        <p>Cartoon politics  <img class="logo" src="./public/img/price.png" alt="Logo représentant une étiquette">
+        </p>
+        <div>
+            <button class="button--langue">FR</button>
+            <button class="button--langue">EN</button>
+        </div>
     </header>
 
     <body>
@@ -22,23 +24,23 @@
         </section>
 
         <section id="console">
-            <button class="button_random">
+            <button class="button--random">
                 Personne aléatoire
             </button>
-            <button class="scale" id="gauche">
+            <button class="button--left">
                 Gauche
             </button>
-            <button class="scale" id="droite">
+            <button class="button--right">
                 Droite
             </button>
         </section>
 
         <section id="statistique">
             <div id="stat-bar">
-
+                
             </div>
-            <div class="button">
-                <button class="button_random" id="suivant">
+            <div>
+                <button class="button--random" id="suivant">
                     <img class="logo" src="" alt="">
                 </button>
             </div>
