--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <body>
         <section id="personnage">
             <div id="personnage-cart">
-                <p>  nom ; prenom  </p>
-                <img id="personnage-img" src="" alt="">
+                <h2>  Simpson Homer  </h2>
+                <img id="personnage-img" src="./public/img/" alt="Image de test">
             </div>
         </section>
 
