rajout du banner

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 		<link rel="stylesheet" href="./public/css/index.css">
 	</head>
 
-    <header role="banner">
-        <p><!-- permet de positionner correctement le banner avec space-around --></p>
-        <h1>Cartoon politics  <img class="logo" src="./public/img/price.png" alt="Logo représentant une étiquette"></h1>
-        <div>
-            <button class="button--langue">FR</button>
-            <button class="button--langue">EN</button>
+    <header class="banner" role="banner">
+        <div class="banner__containerTop">
+            <p><!-- permet de positionner correctement le banner avec space-around --></p>
+            <h1>Cartoon politics</h1>
+            <div>
+                <button class="button--langue">FR</button>
+                <button class="button--langue">EN</button>
+            </div>
+        </div>
+        <div class="banner__containerBottom">
+            <img class="banner__containerBottom__img" src="./public/img/mail.svg" alt="logo d'une enveloppe contenant mon mail">
+            <img class="banner__containerBottom__img" src="./public/img/github.svg" alt="logo de github redirigeant vers mon github">
+            <img class="banner__containerBottom__img" src="./public/img/linkedin.svg" alt="logo de linkedin redirigeant vers mon linkedin">
         </div>
     </header>
 
