banner and button modification

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 
     <header class="banner" role="banner">
         <div class="banner__containerTop">
-            <p><!-- permet de positionner correctement le banner avec space-around --></p>
             <h1>CARTOON POLITICS</h1>
+            <p><!-- permet de positionner correctement le banner avec space-around --></p>
+            <p><!-- permet de positionner correctement le banner avec space-around --></p>
+            <p><!-- permet de positionner correctement le banner avec space-around --></p>
             <div>
-                <button class="banner__containerTop__buttonLangue">FR</button>
-                <button class="banner__containerTop__buttonLangue">EN</button>
+                <button class="banner__containerTop__buttonLangue"><h3>FR</h3></button>
+                <button class="banner__containerTop__buttonLangue"><h3>EN</h3></button>
             </div>
         </div>
         <div class="banner__containerBottom">
-            <img class="banner__containerBottom__img" src="./public/img/mail.svg" alt="logo d'une enveloppe contenant mon mail">
-            <img class="banner__containerBottom__img" src="./public/img/github.svg" alt="logo de github redirigeant vers mon github">
-            <img class="banner__containerBottom__img" src="./public/img/linkedin.svg" alt="logo de linkedin redirigeant vers mon linkedin">
+            <a class="banner__containerBottom__a" href="guillaume.milleret@gmail.com"><img class="banner__containerBottom__a__img" src="./public/img/mail.svg" alt="logo d'une enveloppe contenant mon mail"></a>
+            <a class="banner__containerBottom__a" href="https://github.com/Guimill"><img class="banner__containerBottom__a__img" src="./public/img/github.svg" alt="logo de github redirigeant vers mon github"></a>
+            <a class="banner__containerBottom__a" href="https://www.linkedin.com/in/guillaume-milleret/"><img class="banner__containerBottom__a__img" src="./public/img/linkedin.svg" alt="logo de linkedin redirigeant vers mon linkedin"></a>
         </div>
     </header>
 
@@ -54,5 +56,9 @@
     </body>
 
     <footer>
-        <!-- coordonées / plan du site ! -->
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </footer>
