direct button banner

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <p><!-- permet de positionner correctement le banner avec space-around --></p>
             <p><!-- permet de positionner correctement le banner avec space-around --></p>
             <div>
-                <button class="banner__containerTop__buttonLangue"><h3>FR</h3></button>
-                <button class="banner__containerTop__buttonLangue"><h3>EN</h3></button>
+                <a href="index.html"><button class="banner__containerTop__buttonLangue"><h3>FR</h3></button></a>
+                <a href="https://en.duolingo.com/course/fr/en/Learn-French"><button class="banner__containerTop__buttonLangue"><h3>EN</h3></button></a>
             </div>
         </div>
         <div class="banner__containerBottom">
