try to fit to smaller device screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section role="section de présentation du personnage">
             <div class="personnage" >
                 <h2>  Simpson Homer  </h2>
-                <img src="./public/img/homer.jpg" alt="Image de test">
+                <img class="personnage__img" src="./public/img/homer.jpg" alt="Image de test">
             </div>
         </section>
 
