--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<title>CARTOON POLITICS</title>
 		<link rel="stylesheet" href="./public/css/index.css">
+        <!-- jQuery via CDN -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script src="/public/js/jquery.js"></script>        
 	</head>
 
     <header class="banner" role="banner">
